<resources>
    <string name="app_name">CountryGame</string>
    <string name="zadani_otazky">Na kterém kontinentu leží tento stát:</string>
    <string name="radioAfrika">Afrika</string>
    <string name="radioAsie">Ásie</string>
    <string name="radioAntarktida">Antarktida</string>
    <string name="radioEvropa">Evropa</string>
    <string name="radioOceanie">Oceánie</string>
    <string name="radioJizniAmerika">Jižní Amerika</string>
    <string name="radioStredniAmerika">Střední Amerika</string>
    <string name="radioSeverniAmerika">Severní Amerika</string>
    <string name="StartPagePopis">Vyberte kontinenty, které chcete procvičovat</string>
    <string name="buttonStart">START</string>
    <string name="buttonNext">Další</string>
    <string name="buttonBack"><![CDATA[< Zpět]]></string>
    <string name="buttonNext2">Další otázka</string>
    <string name="backButton2">Zpět do menu</string>
</resources>