<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.countrygame.CountryGameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CountryGameActivity"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/txtZadani"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zadani_otazky"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.072" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:paddingLeft="@dimen/padding_left2"
            android:paddingRight="@dimen/padding_left2"
            android:text="@{ viewModel.actualCountry }"
            android:textColor="#3F51B5"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtZadani" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <RadioButton
                android:id="@+id/radioButtonAfrica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioAfrika"
                android:onClick="@{ () -> viewModel.radioClick(0)}"
                android:textSize="20sp"
                android:layout_marginTop="5dp" />

            <RadioButton
                android:id="@+id/radioButtonAsia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/radioAsie"
                android:onClick="@{ () -> viewModel.radioClick(1)}"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButtonAntarctic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/radioAntarktida"
                android:onClick="@{ () -> viewModel.radioClick(2)}"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButtonEurope"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/radioEvropa"
                android:onClick="@{ () -> viewModel.radioClick(3)}"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButtonOceania"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/radioOceanie"
                android:onClick="@{ () -> viewModel.radioClick(4)}"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButtonSouthAmerica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/radioJizniAmerika"
                android:onClick="@{ () -> viewModel.radioClick(5)}"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButtonCentralAmerica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/radioStredniAmerika"
                android:onClick="@{ () -> viewModel.radioClick(6)}"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButtonNorthAmerica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/radioSeverniAmerika"
                android:onClick="@{ () -> viewModel.radioClick(7)}"
                android:textSize="20sp" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:onClick="@{ () -> viewModel.checkButtonClick()}"
            android:text="@string/buttonNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/buttonBack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>