<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.countrygame.StartPageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/StartPagePopis"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBoxAfrika"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="30dp"
            android:onClick="@{() -> viewModel.onCheckBoxClicked(1)}"
            android:text="@string/radioAfrika"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <CheckBox
            android:id="@+id/checkBoxAsie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:onClick="@{() -> viewModel.onCheckBoxClicked(2)}"
            android:text="@string/radioAsie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxAfrika" />

        <CheckBox
            android:id="@+id/checkBoxAntarktida"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:onClick="@{() -> viewModel.onCheckBoxClicked(3)}"
            android:text="@string/radioAntarktida"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxAsie" />

        <CheckBox
            android:id="@+id/checkBoxEvropa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:onClick="@{() -> viewModel.onCheckBoxClicked(4)}"
            android:text="@string/radioEvropa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxAntarktida" />

        <CheckBox
            android:id="@+id/checkBoxOceanie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:onClick="@{() -> viewModel.onCheckBoxClicked(5)}"
            android:text="@string/radioOceanie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxEvropa" />

        <CheckBox
            android:id="@+id/checkBoxJAmerika"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:onClick="@{() -> viewModel.onCheckBoxClicked(6)}"
            android:text="@string/radioJizniAmerika"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxOceanie" />

        <CheckBox
            android:id="@+id/checkBoxCentAmerika"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:onClick="@{() -> viewModel.onCheckBoxClicked(7)}"
            android:text="@string/radioStredniAmerika"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxJAmerika" />

        <CheckBox
            android:id="@+id/checkBoxSAmerika"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:onClick="@{() -> viewModel.onCheckBoxClicked(8)}"
            android:text="@string/radioSeverniAmerika"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxCentAmerika" />

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:onClick="@{ () -> viewModel.onButtonStartClick() }"
            android:text="@string/buttonStart"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxSAmerika" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>